# SEngineX

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Resources/: LIGHTING_DepthOnly.shader  LIGHTING_deferred.fs  LIGHTING_deferred.shader  SEngineXGLSL.include  SEngineXGLSL.include.glsl  UIText.shader  basic.fp  basic.fs  basic.shader  basic.vp  bloom_add.fs  bloom_add.shader  bloom_blur.fp  bloom_blur.shader  bloom_brightness.fs  bloom_brightness.shader  brickwall.material  deferred_basic.fs  deferred_basic.shader  deferred_bump.fp  deferred_bump.shader  hdr_render.fp  hdr_render.fs  hdr_render.shader  light.material  passthrough.vs  unlit.shader  untitled-scene.mtl
SEngineX/: CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Engine.cpp  Engine.h  Input.cpp  Input.h  LIGHTING_DepthOnly.shader  LIGHTING_DepthOnly.vs  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  RenderInstruction.cpp  RenderInstruction.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  SEngineX-Info.plist  SEngineXGLSL.include  Serializer.cpp  Serializer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  UIRenderer.cpp  (+17 more)
SEngineX.xcodeproj/: project.pbxproj
SEngineX.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SEngineX/sphere lamp_obj/: spherelamp.mtl
cmake/Modules/: FindAssimp.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindRapidJSON.cmake
